
2016-02-09  James Youngman  <jay@gnu.org>

	* src/sf-prs.cc (print_seq_list): Use a range-based for loop for
	iterating over sequence numbers.
	* src/sf-val.cc (validate_seq_lists): Factor out the repeated
	logic into a local function, validate_seq_numbers.
	* src/sf-get2.cc (get): Use a range-based for loop for iterating
	over the comments.

2016-02-08  James Youngman  <jay@gnu.org>

	State that a C++11 compiler is needed.
	* README: Mention the need for a C++11 capable compiler.
	* NEWS: Likewise.

	Store MRs as std::vector<std::string> (not mylist<std::string>).
	* unit-tests/test_bigfile.cc: (emit_comments_or_mrs): Convert to a
	template so that we can use it to print a std::vector<std::string>
	or a mylist<std::string>.
	(emit_delta): Pass MRs as a vector not a mylist.
	(make_delta): Likewise.
	* unit-tests/test_delta-table.cc: Update to take account of the
	change in representation of MR lists from mylist<std::string> to
	std::vector<std::string>.
	* unit-tests/test_delta.cc: Likewise.
	* src/sf-write.cc (write_delta): Change the way we loop over the
	MRs and the comments to use a range-based for loop (hence
	accomodating the change in type of the MR list.
	* src/sf-prt.cc (print_string_list): Convert this function to a
	template so that it can be used to print a
	std::vector<std::string> or a mylist<std::string>.
	* src/sf-prs.cc (print_string_list): Add an override of
	print_string_list for printing an instance of const
	std::vector<std::string>&.
	* src/sf-delta.cc (sccs_file::add_delta): Update the type of the
	mrs parameter to std::vector<std::string>.
	* src/sf-cdc.cc (process_mrs): Update the parameter list to use
	std::vector<std::string> instead of mylist<std::string>.  Change
	the type of the to_delete parameter to const
	std::unordered_set<std::string>& for greater efficiency.
	* src/sf-admin.cc (sccs_file::create): Update type of mrs
	parameter.
	* src/sccsfile.h (sccs_file::check_mrs): Update the type of the